# sensi

./: .gitignore  LICENSE  Makefile  README.md  README.rst  pyproject.toml  requirements.txt
.github/workflows/: auto-approve.yml  auto-merge.yml  dependabot-auto.yml  dependabot-autoapprove.yml  dependabot-automerge.yml  main.yml  python-app.yml  python-publish.yml
database/: models.py
resources/: predictor.py  processing.py
resources/nltk_data/corpora/stopwords/: german  portuguese  slovene
sensi/: __init__.py  pyproject.toml
sensi/database/: models.py  query.py
sensi/resources/: predictor.py  processing.py  sentiment.py
sensi/resources/nltk_data/corpora/stopwords/: french  spanish  tajik
tests/: test_nbc_sentimen.py  test_prediktor.py  test_processing.py  test_query.py  test_sentiment.py
