[tool.poetry]
name = "sensi"
version = "0.1.4"
description = "analisis sentimen bahasa Indonesia menggunakan Naive-Bayes"
authors = ["GazDuckington <dianghazy@protonmail.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/GazDuckington/nbc-sentimen"
repository= "https://github.com/GazDuckington/nbc-sentimen"
packages = [{include = "sensi"}]

[tool.poetry.dependencies]
python = "^3.10"
nltk = "^3.7"
Sastrawi = "^1.0.1"
numpy = "^1.23.2"
pandas = "^1.4.3"
SQLAlchemy = "^1.4.40"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
