[tool.poetry]
name = "sensi"
version = "1.0.3"
description = "analisis sentimen bahasa Indonesia menggunakan Naive-Bayes"
authors = ["GazDuckington <dianghazy@protonmail.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/GazDuckington/nbc-sentimen"
repository = "https://github.com/GazDuckington/nbc-sentimen"
packages = [{ include = "sensi" }]

[tool.poetry.dependencies]
python = "^3.11"
nltk = "^3.8"
Sastrawi = "^1.0.1"
numpy = "^1.24.1"
pandas = "^1.5.2"
SQLAlchemy = { extras = ["asyncio"], version = "^1.4.45" }
aiosqlite = "^0.18.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
black = "^22.12.0"
debugpy = "^1.6.6"

[build-system]
requires = ["poetry-core>=1.3.1"]
build-backend = "poetry.core.masonry.api"
