[tool.poetry]
name = "sensi"
version = "1.0.14"
description = "Naive-Bayes based sentiment analysis library for the Indonesian Language."
authors = ["GazDuckington <dianghazy@protonmail.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/GazDuckington/sensi"
repository = "https://github.com/GazDuckington/sensi"
packages = [{ include = "sensi" }]
keywords=['NLP', 'Bahasa', 'Indonesia', 'Sentimen', 'Analisis']
classifiers = [
	'Intended Audience :: Developers',
	'Intended Audience :: Information Technology',
	'Intended Audience :: Science/Research',
	'Topic :: Text Processing :: Linguistic',
	'Topic :: Scientific/Engineering :: Artificial Intelligence',
	'Natural Language :: Indonesian',
	'Programming Language :: Python',
	'License :: OSI Approved :: MIT License',
	'Operating System :: OS Independent',
	'Topic :: Software Development :: Libraries :: Python Modules',
]

[tool.poetry.dependencies]
python = "^3.11"
nltk = "^3.8"
numpy = "^1.24.1"
pandas = ">=1.5.2,<3.0.0"
SQLAlchemy = { extras = ["asyncio"], version = ">=1.4.45,<3.0.0" }
aiosqlite = ">=0.18,<0.20"
bahasa = "^1.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
black = ">=22.12,<25.0"
debugpy = "^1.6.6"

[build-system]
requires = ["poetry-core>=1.3.1"]
build-backend = "poetry.core.masonry.api"
